--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
         exclude 'META-INF/NOTICE.txt'
     }
 
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 26
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.coinbase.sdk.example"
@@ -40,7 +40,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile ('org.roboguice:roboguice:2.0')
-    compile ('com.coinbase.android:coinbase-android-sdk:1.0.1')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'org.roboguice:roboguice:2.0'
+    implementation ('com.coinbase.android:coinbase-android-sdk:1.0.1'){
+        exclude group: 'org.apache.httpcomponents', module:'httpclient'
+    }
 }
